Desktop/My-First-FES-Project/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;

}

nav {
    height: 70px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 16px;
    background-color: #cafdff;
}

header {
    background-color: #eadcff;
    height: calc(100vh - 70px);
    padding: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
}

h1 { 
    font-size: 72px;
}

.subheader { 
    font-size: 36px;
    margin: 16px 0 24px 0;

}

button {
  background-color: #05c7cf;
  color: white;
  border: none;
  padding: 8px 16px;
  font-size: 24px;  
  cursor: pointer;
  
}
a {
    color: black;
    font-size: 24px;
    font-weight: 700;
}
.logo {
    width: 300px;
}

ul {
    display: flex;
}

li {
    list-style-type: none;
    padding-left: 16px;
}



.row {
    width: 100%;
    max-width: 1300px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

#about, #discord, #contact, footer {
    padding: 48px 0;
    

}


/*

ABOUT 

*/


#about {
    background-color: #f8ffdc;
}

h2 {
    font-size: 60px;
    text-align: center;
    margin-bottom: 24px;
}

.section__description {
   display: flex;
   justify-content: center;
   align-items: center; 
}

.about__img--wrapper {
    width: 40px;
    
}

img {
    width: 100%;
}

.about {
    width: 300px;
}
.section__description--wrapper {
    width: 60%;
    
}

.about__img--wrapper,
 .section__description--wrapper {

    padding: 0 24px;
 }


.section__description--para {
    font-size: 20px;
    line-height: 1.5;
    margin-bottom: 24px;
}

/*

Discord 

*/

#discord {
    background-color: #cefeff;
}

.discord {
    width: 300px;
}


/*

Contact 

*/

#contact {
    background-color: #dce9ff;
}

form {
    width: 100%;
    max-width: 600px;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
}

input, textarea {
    margin-bottom: 24px ;
    font-size: 20px;
    padding: 6px 12px;
}


/*

Footer

*/

footer {
    background-color: #aaf5ff;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer__logo {
    max-width: 480px;
    margin-bottom: 16px;
}

.footer__links {
    margin-bottom: 32px;
}

.footer__link {
    padding: 0 16px;
}

